# realtime

./: .gitignore  Makefile  docker-compose.yml
project/: Dockerfile  Makefile  pyproject.toml  requirements.txt
project/core/: asgi.py  settings.py  urls.py
project/integers/: consumers.py  routing.py  urls.py  views.py
project/static/: main.js
project/templates/: index.html
