[tool.poetry]
name = "realtime"
version = "0.1.0"
description = ""
authors = ["Natalia Teplynina <nt@mnt9.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
channels = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
